rewrite routes for use db
