# src/routes/auth.ts
@@ -1,5 +1,8 @@
-import express, { Request, Response, json }  from 'express';
-import { fakeUsersDB } from '../middlewares/access';
+import express, { Request, Response }  from 'express';
+import userSchema from '../models/userSchema';
+import bcript from 'bcrypt';
+import jwt from 'jsonwebtoken';
+import dbConnect from '../middlewares/db-conect';
 
 export const router = express.Router();
 
@@ -8,36 +11,26 @@ router.get("/login", (req: Request, res: Response) => {
 });
 
 router.get("/auth", (req: Request, res: Response) => {
-    res.clearCookie("token");
-    res.clearCookie("access");
     res.render("login", {invalidLogin: false});
 });
 
-router.post("/auth", (req: Request, res: Response) => {
+router.post("/auth", dbConnect, async (req: Request, res: Response) => {
+    const invalidLogin = () => {
+        res.render("login", {invalidLogin: true, invalidLoginMessage: "Email ou senha inválidos!"});
+    }
+
     const { login, password } = req.body;
 
-    const user = fakeUsersDB.find(user => user.login === login);
-    const validPassword = user?.password === password;
+    const user = await userSchema.findOne({ email: login }).select("+password");
+    if (!user) return invalidLogin();
+
+    const validPassword = await bcript.compare(password, user.password);
+    if (!validPassword) return invalidLogin();
     
-    if (!user) {
-        res.render("login", {invalidLogin: true, invalidLoginMessage: `"Login inválido!" ${fakeUsersDB.length}`});
-        return;
-    }
 
-    if (!validPassword) {
-        res.render("login", {invalidLogin: true, invalidLoginMessage: "Senha inválida!"});
-        return;
-    }
+    const token = jwt.sign({ id: user._id }, process.env.JWT_SECRET!, { expiresIn: "1d" });
 
-    const cookie24h = 24 * 60 * 60 * 1000;
-
-    if (!req.cookies["token"]) {
-        res.cookie("token", user.token, { maxAge: cookie24h });
-    }
-
-    if (user.access === "admin") {
-        res.cookie("access", "admin");
-    }
+    res.cookie("x-auth-token", token);
     
     res.redirect("/");
     
